[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cntrib-cli"
authors = [{ name = "Bradley Wojcik", email = "bradleycwojcik@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
  "click >=8",
  "keyring>=23",
  "rich >=13",
  "requests >=2",
  "pyyaml >=6",
]

[project.scripts]
cntrib = "cntrib.root:cli"

[project.urls]
Home = "https://github.com/boldandbrad/cntrib-cli"

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov",
  "pytest-mock",
]
dev = [
  "black",
  "flake8",
  "flit",
  "isort",
  "pre-commit",
  "homebrew-pypi-poet",
  "semgrep",
  "refurb",
]

[tool.flit.module]
name = "cntrib"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
